# chat-with-audio

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  LICENSE  MORNING_REPORT.md  NIGHT_ROADMAP.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
cpp/: bindings.cpp  biquad.hpp  dsp_common.hpp  dynamics.hpp
docs/: README.md  architecture.md  compliance.md  getting-started.md  recipes.md  roadmap.md  smart-regions.md  tools.md  trainingshandleiding.md  workflows.md
scripts/: maak_oefenmateriaal.py  mcp_smoke.py
src/audio_improve_toolkit/: __init__.py  analysis.py  audition.py  chain.py  cli.py  improve.py  io.py  match.py  optimize.py  refine.py  server.py  session_log.py  sessions.py  training.py  visuals.py
src/audio_improve_toolkit/dsp/: __init__.py  ai_nr.py  dereverb.py  fallback.py  repair.py  stems.py
src/audio_improve_toolkit/viewer/: __main__.py  server.py
src/audio_improve_toolkit/viewer/static/: app.js  index.html  style.css
src/chat_with_audio/: __init__.py  analysis.py  asr.py  automix.py  bwf.py  chain.py  cli.py  compliance.py  delivery.py  id3.py  improve.py  io.py  markers.py  match.py  optimize.py  qcsheet.py  recipes.py  refine.py  regions.py  segments.py  server.py  session_log.py  sessions.py  speech_edit.py  sync.py  textedit.py  visuals.py
src/chat_with_audio/dsp/: __init__.py  deess.py  dialogue.py  dynamics_plus.py  generate.py  repair.py  roomtone.py  space.py  spectral_nr.py  spectral_repair.py  stems.py  timepitch.py  utility.py
src/chat_with_audio/recipes/: broadcast-quiet-pauses.json  dialogue-polish.json  futz-megaphone.json  futz-other-room.json  futz-small-speaker.json  futz-telephone.json  futz-walkie.json  music-master.json  noisy-speech-rescue.json  podcast-speech.json
src/chat_with_audio/viewer/: __init__.py  __main__.py  server.py
src/chat_with_audio/viewer/static/: app.js  index.html  style.css
tests/: conftest.py  test_analysis.py  test_automix.py  test_band_duck.py  test_batch.py  test_compliance.py  test_declick_bursts.py  test_deess_resonance.py  test_delivery.py  test_dialogue.py  test_dsp.py  test_housekeeping.py  test_improve_e2e.py  test_match.py  test_mcp_tools.py  test_oefenmateriaal.py  test_perceptual_taste.py  test_qc.py  test_recipes.py  test_regions.py  test_repair.py  test_roomtone.py  test_segments_refine.py  test_smart_edit_verify.py  test_space.py  test_spectral_repair.py  test_speech_edit.py  test_stems.py  test_surround.py  test_sync.py  test_textedit.py  test_timepitch.py  test_utility_steps.py  test_viewer.py
upload/: Testbestand musical Rode Wireless 1.pkf
